# lam-workflow

./: .env  .env.secrets  .gitignore  Makefile  README.md  logging.conf  pyproject.toml
docker/: .env  docker-compose.yml
docker/fuseki/: Dockerfile
docker/lam4doc/api/: Dockerfile
docker/lam4doc/ui/: Dockerfile
docker/validator/api/: Dockerfile
docker/validator/ui/: Dockerfile
docs/lam-architecture/: abstract.tex  lam-enterprise-architecture.tex  title.tex
docs/lam-architecture/content/: application-architecture.tex  architecture-building-blocks-definitions.tex  business-architecture.tex  conclusions.tex  introduction.tex  motivation-architecture.tex
docs/references/: references.bib
docs/tech-manual/: abstract.tex  disclaimer.tex  tech-manual.tex  title.tex
docs/tech-manual/content/: configuration.tex  indexes_fields.tex  installation.tex  introduction.tex  makefile_targets.tex  usage.tex
lam4doc/: config.py
lam4doc/adapters/: celery.py
lam4doc/entrypoints/api/: handlers.py  handlers_async.py  run.py
lam4doc/entrypoints/ui/: api_wrapper.py  forms.py  run.py  views.py
lam4doc/services/: db.py  report_handlers.py  tasks.py
requirements/: common.txt  dev.txt
resources/: lam-skos-ap.ttl
resources/shacl-shapes/: lam-skos-ap.ttl
resources/templates/html/: config.json
resources/templates/indexes/: celex.json  classes.json  properties.json
resources/templates/json/: config.json
resources/templates/pdf/: config.json  (+3 more)
validator/: __init__.py  config.py
validator/adapters/: celery.py
validator/service_layer/: ap_manager.py  db.py  handlers.py  helpers.py  report_handlers.py  tasks.py  time.py
validator/utils/: constants.py  file.py
validator_resources/: lam-skos-ap.ttl
(+32 files in other folders)
