[project]
name = "lam-workflow"
version = "1.0.5"
description = "The deployment package for the LAM services"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "celery==5.5.0",
    "connexion[swagger-ui]==3.2.0",
    "eds4jinja2==0.1.36",
    "flask==3.1.0",
    "flask-bootstrap==3.3.7.1",
    "flask-wtf==1.2.2",
    "flower==2.0.1",
    "gunicorn==23.0.0",
    "openpyxl==3.1.5",
    "python-dotenv==1.1.0",
    "redis==5.2.1",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "shortuuid==1.0.13",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "coverage==7.8.0",
    "pytest==8.3.5",
    "pytest-bdd==8.1.0",
    "pytest-cov==6.1.1",
]
docs = [
    "recommonmark==0.7.1",
    "sphinx==7.4.7",
    "sphinxcontrib-apidoc==0.5.0",
]
