[project]
name = "lam-workflow"
version = "1.0.5"
description = "The deployment package for the LAM services"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "connexion[flask,swagger-ui,uvicorn]>=3.2.0",
    "eds4jinja2>=0.2.0",
    "flask>=3.1.0",
    "flask-bootstrap>=3.3.7.1",
    "flask-wtf>=1.2.2",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.0",
    "rdflib>=7.0.0",
    "redis>=5.2.1",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "shortuuid>=1.0.13",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.3",
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.1.1",
]
docs = [
    "recommonmark>=0.7.1",
    "sphinx>=8.2.3",
    "sphinxcontrib-apidoc>=0.5.0",
]
